# PII-detector-py

./: .gitignore  Makefile  README.md  build_binary.py  combined_pii_detector.py  local_build.py  pii_cli.py  pii_server.py  presidio_pii_detector.py  pyproject.toml  regex_pii_detector.py  spacy_detector.py  spacy_ner_pii_detector.py
.github/workflows/: release.yml  test-build.yml
